# Mineradio-Next

./: .editorconfig  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  AGENTS.md  AI_HANDOFF.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  NOTICE.md  PRIVACY.md  README.md  RELEASE.md  desktop-lyrics.html  index.html  overview.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  (+1 more)
debugger/: 2.md
desktop/: main.js
electron/: main.js  overlay-preload.cjs  overlay-preload.js  preload.cjs  preload.js  server.js  splash.html  updater.js  workerw.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
legacy/: .gitattributes  .gitignore  AGENTS.md  AI_HANDOFF.md  README.md  SECURITY.md  package.json
old-Mineradio/: README.md  SECURITY.md
public/: index.html  tauri-adapter.js
scripts/: wait-for-server.mjs
server/: index.js
src/: App.vue  desktop-lyrics.ts  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: mineradio.toml
src-tauri/src/: lib.rs
src-tauri/src/commands/: helpers.rs  login.rs  mod.rs  netease_api.rs  qq_api.rs  tray.rs  update_cmd.rs  weather_cmd.rs  window.rs
src-tauri/src/netease/: mod.rs  request.rs
src-tauri/src/netease/api/: comment.rs  like.rs  personalized.rs  search.rs  song.rs
src-tauri/src/qq/: mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/routes/: app.rs  artist.rs  beatmap.rs  discover.rs  login.rs  lyric.rs  mod.rs  playlist.rs  podcast.rs  proxy.rs  qq.rs  search.rs  static_files.rs
(+331 files in other folders)
