[package]
name = "mineradio"
version = "1.1.4"
description = "Mineradio-Next - 沉浸式桌面音乐播放器 (Tauri v2 + Rust)"
authors = ["zhanghaifei1997"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "mineradio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 core + plugins
tauri = { version = "2", features = ["tray-icon", "devtools", "macos-private-api"] }
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"

# HTTP server (for /api/* routes, frontend compat)
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# HTTP client (replaces axios)
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "gzip"] }

# Crypto (NeteaseCloudMusicApi encryption)
aes = "0.8"
rsa = "0.9"
md-5 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Compression (eapi response decompression)
flate2 = "1"

# QR code (login QR generation)
qrcode = "0.14"
image = "0.25"

# Logging
log = "0.4"
env_logger = "0.11"

# Misc
once_cell = "1"
dirs = "5"
url = "2"
futures-util = "0.3"

# URL encoding (for form params)
serde_urlencoded = "0.7"

# URL encoding/decoding (for QQ cookie values)
urlencoding = "2"

# Regex (lightweight, for crypto parsing)
regex-lite = "0.1"
